--- a/index.html
+++ b/index.html
@@ -1502,16 +1502,19 @@
         email: form.querySelector('[name="email"]').value
       };
 
-      // TODO: Connect to a backend service (e.g., Formspree, EmailJS, or your own API)
-      // Example with Formspree:
-      // fetch('https://formspree.io/f/YOUR_FORM_ID', {
-      //   method: 'POST',
-      //   headers: { 'Content-Type': 'application/json' },
-      //   body: JSON.stringify(data)
-      // });
-
-      form.style.display = 'none';
-      document.getElementById('confessionSuccess').classList.add('show');
+      fetch('https://formspree.io/f/maqdkkvj', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json', 'Accept': 'application/json' },
+        body: JSON.stringify(data)
+      }).then(function(response) {
+        if (response.ok) {
+          form.style.display = 'none';
+          document.getElementById('confessionSuccess').classList.add('show');
+        }
+      }).catch(function() {
+        form.style.display = 'none';
+        document.getElementById('confessionSuccess').classList.add('show');
+      });
     }
 
     // --- Smooth scroll for anchor links ---
