--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
   <meta property="og:description" content="The darkest labyrinths of the human psyche. Where desire meets consequence.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://samuelmgray.com">
+  <meta property="og:image" content="https://samuelmgray.com/assets/images/covers/Cover_The_Bus_ride.png">
+  <meta property="og:site_name" content="Samuel M. Gray">
+  <meta property="og:locale" content="en_US">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Samuel M. Gray — The Storyteller of Shadows">
+  <meta name="twitter:description" content="Dark, psychological erotic fiction. Where desire meets consequence.">
+  <meta name="twitter:image" content="https://samuelmgray.com/assets/images/covers/Cover_The_Bus_ride.png">
+  <meta name="robots" content="index, follow">
+  <meta name="keywords" content="Samuel M. Gray, erotic fiction, dark romance, psychological erotica, short stories, erotic thriller, The Bus Ride, Posed The Bait, Flight SK4481">
+  <link rel="canonical" href="https://samuelmgray.com">
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>✦</text></svg>">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Samuel M. Gray",
+    "url": "https://samuelmgray.com",
+    "description": "Author of dark, psychological erotic fiction",
+    "jobTitle": "Author",
+    "email": "contact@samuelmgray.com",
+    "sameAs": []
+  }
+  </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
