Revise story descriptions in index.html
Updated descriptions for multiple erotic short stories to enhance narrative detail and engagement.

--- a/index.html
+++ b/index.html
@@ -1441,7 +1441,7 @@
         number: 'Story I',
         title: 'The Bus Ride',
         genre: 'Erotic Short Story',
-        description: 'A routine bus ride through the city becomes anything but ordinary when two strangers find themselves drawn into a charged, wordless exchange. What begins as stolen glances escalates into something neither of them expected — a journey that blurs the line between public composure and private desire. Some destinations aren\'t on the map.',
+        description: 'Two strangers. One bus. No words spoken — just a slow, deliberate escalation that neither of them has the decency to stop. What begins with eye contact across a crowded aisle becomes a test of composure: how far can you go in plain sight before someone breaks? Told from both perspectives, The Bus Ride unravels who was really in control — and why she walked away without looking back.',
         quote: 'Some rides take you further than you planned.',
         link: '#',
         cover: 'assets/images/covers/Cover_The_Bus_ride.png',
@@ -1452,7 +1452,7 @@
         number: 'Story II',
         title: 'Posed: The Bait',
         genre: 'Erotic Short Story',
-        description: 'She knows exactly what she\'s doing — every angle, every glance, every carefully constructed moment of vulnerability. He thinks he\'s the one in control. But the line between photographer and subject, between watching and being caught, has never been thinner. The question isn\'t who set the trap. It\'s who wanted to be trapped.',
+        description: 'She knows exactly what she\'s doing — every angle, every glance, every carefully staged moment of vulnerability. He thinks he\'s in control. But the distance between photographer and subject, between watching and being watched, has never been more dangerous. The question isn\'t who set the trap. It\'s who wanted to be caught.',
         quote: 'She set the trap. He walked in willingly.',
         link: '#',
         cover: 'assets/images/covers/cover_the_bait.png',
@@ -1463,7 +1463,7 @@
         number: 'Story III',
         title: 'Flight SK4481',
         genre: 'Erotic Short Story',
-        description: 'A chance encounter at 30,000 feet between two strangers who have no business talking to each other. What starts as an accidental touch on a shared armrest becomes a game of dares — each one bolder than the last, each one harder to walk away from. Somewhere between Oslo and Amsterdam, the rules of the ground stop applying.',
+        description: 'A shared armrest. An accidental touch. A game of dares at 30,000 feet — each one bolder than the last, each one harder to walk away from. Somewhere between Oslo and Amsterdam, two strangers discover that the rules of the ground don\'t apply when there\'s nowhere to land.',
         quote: '30,000 feet. No rules. No turning back.',
         link: '#',
         cover: 'assets/images/covers/Cover_Flight_SK4481.png',
