--- a/index.html
+++ b/index.html
@@ -538,16 +538,14 @@
 
     .book-cover-image {
       width: 100%;
-      height: 280px;
       overflow: hidden;
       position: relative;
     }
 
     .book-cover-image img {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: top center;
+      height: auto;
+      display: block;
       transition: transform 0.6s ease;
     }
 
